# automata-rs

./: Cargo.toml
src/: input.rs  logger.rs  main.rs  pos.rs  ring.rs  time.rs
src/blocks/: block_registry.rs  mod.rs
src/chunks/: mod.rs
src/collections/: mod.rs  palette.rs
src/concurrency/: mod.rs
src/input/: input_vector.rs  mod.rs
src/memory/: memory_pool.rs  mod.rs
src/opengl/: mod.rs  sync.rs  vertex_array_object.rs
src/opengl/buffer/: buffer_allocator.rs  mod.rs  ring_buffer.rs
src/opengl/shader/: mod.rs  program_pipeline.rs  shader_program.rs
src/render/: camera.rs  material.rs  mod.rs  multi_draw_indirect.rs  vertex_array.rs
src/render/mesh/: mod.rs  multi_draw_indirect.rs  multidraw_indirect.rs  vertex_array.rs
src/world/: mod.rs
src/world/block/: block_registry.rs  mod.rs
src/world/chunk/: mesher.rs  mod.rs
