[package]
name = "automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
raw-gl-context = "*"
winit = "*"
glam = "*"
log = "*"
bitflags = "*"
lazy_static = "*"
chrono = { version = "*", default-features = false, features = ["clock"] }
num_enum = "*"
specs = { version = "*", default-features = false, features = ["specs-derive"] }
rusty_pool = { version = "*", default_features = false }
crossbeam-channel = "*"
num_cpus = "*"